# Fraud_detect

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/: README.md
data/generators/: __init__.py  consume_check.py  replay.py
data/schemas/: transaction_v1.avsc
infra/: README.md
models/: __init__.py  train_baseline.py
models/artifacts/: baseline_metrics.json
scripts/: make_synth_paysim.py  map_demo.py  validate_demo.py
src/fraud_detect/: __init__.py  aggregation.py  baseline.py  baseline_features.py  constants.py  metrics.py  paysim_mapping.py  replay_source.py  schema_validator.py  synth.py
tests/: test_aggregation.py  test_baseline.py  test_metrics.py  test_paysim_mapping.py  test_replay_source.py  test_schema_validator.py
