[project]
name = "fraud-detect"
version = "0.1.0"
description = "Real-time P2P payment fraud detection — portfolio project"
requires-python = ">=3.11"
dependencies = [
    "fastavro==1.9.7",
    "pandas==2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
